--- a/food-delivery-server/package.json
+++ b/food-delivery-server/package.json
@@ -1,12 +1,15 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Delivery service for a food delivery platform",
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --detectOpenHandles --forceExit",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --detectOpenHandles --forceExit",
+    "test:ci": "jest --ci --coverage --reporters=default --reporters=jest-junit"
   },
   "keywords": [],
   "author": "",
@@ -24,12 +27,17 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
-    "socket.io": "^4.8.1"
+    "prom-client": "^15.1.0",
+    "socket.io": "^4.8.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "msw": "^2.7.4",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "supertest": "^6.3.3"
   }
 }
