--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -1,16 +1,20 @@
 {
   "name": "notification-service",
   "version": "1.0.0",
+  "description": "Notification service for a food delivery platform",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --forceExit",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --detectOpenHandles --forceExit",
+    "test:ci": "node --experimental-vm-modules node_modules/jest/bin/jest.js --ci --coverage --reporters=default --reporters=jest-junit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.9.0",
     "cors": "^2.8.5",
@@ -19,9 +23,14 @@
     "kafkajs": "^2.2.4",
     "mongoose": "^8.14.0",
     "nodemailer": "^6.10.1",
-    "twilio": "^5.5.2"
+    "prom-client": "^15.1.0",
+    "twilio": "^5.5.2",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^6.3.3"
   }
 }
