--- a/restaurant/package.json
+++ b/restaurant/package.json
@@ -1,12 +1,16 @@
 {
   "name": "resturant",
   "version": "1.0.0",
-  "description": "",
+  "description": "Restaurant management service for a food delivery platform",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --forceExit",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --detectOpenHandles --forceExit",
+    "test:ci": "node --experimental-vm-modules node_modules/jest/bin/jest.js --ci --coverage --reporters=default --reporters=jest-junit"
   },
   "author": "",
   "license": "ISC",
@@ -20,9 +24,13 @@
     "firebase": "^11.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
-    "shared-kafka": "file:../shared-kafka/shared-kafka-1.0.0.tgz"
+    "prom-client": "^15.1.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
+    "nodemon": "^3.1.9",
+    "supertest": "^6.3.3"
   }
 }
