feat: Add Integration Tests for all 6 microservices
- Auth Service: 13 integration tests (register, login, refresh-token, logout, me, validate-token, forgot/reset password)
- Order Service: 10 integration tests (create order, get orders, update status, tracking)
- Restaurant Service: 11 integration tests (CRUD restaurants, dishes, categories, search)
- Payment Service: 9 integration tests (initialize, verify, refund, get payment)
- Notification Service: 12 integration tests (email, SMS, CRUD notifications, mark read)
- Admin Service: 12 integration tests (add order to settlement, get settlements, process weekly)

Updated package.json with test:unit and test:integration scripts for all services.
Moved alertmanager secrets to secrets.env (gitignored) for security.
Updated alertmanager.yml with placeholder values.

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,12 @@
 **/.env
 **/.env.*
 !.env.example
+!secrets.env.example
 .env.local
+
+# Secrets files
+**/secrets.env
+**/alertmanager.secrets.yml
 
 ### Build artifacts ###
 **/dist/
