--- a/order/package.json
+++ b/order/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
+    "mongodb-memory-server": "^10.3.0",
     "nodemon": "^3.1.9",
     "supertest": "^6.3.3"
   }
