feat: Update SonarQube to self-hosted configuration
- Update CI/CD pipeline for self-hosted SonarQube runner
- Add JOB 6c: SonarQube Analysis (requires self-hosted runner)
- Add JOB 6d: Local instructions for PR
- Update sonar-project.properties for local server
- Update CODE_QUALITY_GUIDE.md with SonarQube self-hosted docs
- Add .scannerwork to .gitignore

Trigger SonarQube scan: add [sonar] to commit message

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,12 @@
 # SonarQube Configuration for FastFood Delivery Platform
 
 # Project identification
-sonar.projectKey=fastfood-delivery-platform
+sonar.projectKey=fastfood-delivery
 sonar.projectName=FastFood Delivery Platform
 sonar.projectVersion=1.0.0
 
-# Organization (for SonarCloud)
-# sonar.organization=your-organization
+# SonarQube Server (Local)
+sonar.host.url=http://localhost:9000
 
 # Source configuration
 sonar.sources=auth,order,restaurant,payment-service,notification-service,admin-service,food-delivery-server
