--- a/monitoring/alertmanager/alertmanager.yml
+++ b/monitoring/alertmanager/alertmanager.yml
@@ -27,7 +27,7 @@ global:
   # Slack Configuration - Replace with your webhook URL
   # Get it from: https://api.slack.com/apps → Incoming Webhooks
   # Set via environment variable SLACK_WEBHOOK_URL or replace SLACK_WEBHOOK_PLACEHOLDER
-  slack_api_url: 'SLACK_WEBHOOK_URL_PLACEHOLDER'
+  slack_api_url: 'https://hooks.slack.com/services/placeholder'
 
 route:
   group_by: ['alertname', 'service', 'severity']
