--- a/auth/package.json
+++ b/auth/package.json
@@ -34,6 +34,8 @@
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
     "prom-client": "^15.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
