--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -26,6 +26,8 @@
     "mongoose": "^8.14.0",
     "nodemailer": "^6.10.1",
     "prom-client": "^15.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "twilio": "^5.5.2",
     "winston": "^3.11.0"
   },
