--- a/order/package.json
+++ b/order/package.json
@@ -37,6 +37,8 @@
     "mongoose": "^8.13.0",
     "morgan": "^1.10.0",
     "prom-client": "^15.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.11.0",
     "ws": "^8.14.2"
   },
