--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -25,6 +25,8 @@
     "mongoose": "^8.13.2",
     "prom-client": "^15.1.0",
     "stripe": "^18.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
